--- a/VRChat/10/949810.html
+++ b/VRChat/10/949810.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "5G0P8NqJJ8jZpjt0NVFZ75cA0dpitGdTk4ENStLa+zo="></script>
+    "uZB6AeXxZu7IVTAYQjHMXotAlCWfAIMZLeFidfNnBlI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"キャスケット帽子2.0＋耳飾りバージョン公開！　2019/03/27アップデート！　byもずくん","description":"もずくんの　キャスケット帽子\n作った人　もずくん　@mozukuumauma\n　　　（Twitterで報告もらえると超嬉しいです！）\n2018-07-27　投稿\n2018-10-23　更新　ハロウィン仕様テクスチャ追加とカラバリテクスチャ追加\n2019-01-26　大幅バージョンアップ2.0　詳細は下記\n2019-03-27　イアリングバージョン公開\n\n\n『2.0』\n・ポリゴン数表記・及び削減\n　商品詳細を△基準に、ポリゴン数の削減　これにより\n　　帽子　　△394\n　　リボン　△228　　へ\n・UV展開のし直し\n　新しくテクスチャを描かれていた方は対応してもらえると嬉しい\n・新しいテクスチャパターンの追加\n　いつものチェック柄を軸にパターンを追加・カラーバリエーションも各種4パターンで合計12パターン\n・FBXデータを2種付属\n　リボンメッシュを合成したものとそうでないものを追加\n・Unitypackageを追加\n　まんまるシェーダー1.3【作者@Mini_9321_VR】適応済\n　boushiAがメッシュ別　boushiBがメッシュ合成\n\n【耳飾り詳細】\n事前にダイナミックボーンを導入しておくと揺れものとして扱えます\n\n使い方\n耳飾り想定\nHierarchyでHeadを親にして位置調整してサイズ調整！！\n終わりです\n\n内容\n本体FBX　▲1290\n　ボーン2本仕込んでるので揺らすことが可能\n　Unitypackage同封\n　ダイナミックボーン設定済Prefab同封\nまんまるシェーダー2.0【作者@Mini_9321_VR】適応済\n\nVRchat内で自分が使っている帽子の配布です。\n帽子を使った自作アバターはこちら\n【https://mozukuumauma.booth.pm/items/1171379】\nアクセサリーにどうぞ、リボンは好きに外したり増やしたりしてね。\n基本VRchat前提で構成しています。\n\n以下テンプレ\n購入・DLを規約を守る意思表示とします\n作者【もずくん@mozukuumauma】に権利があります\n\n著作表示　○　（著作ってより、もずくんの使ったよって報告が欲しいだけです）\n商用利用　○　（テクスチャには商用利用可の物を一部利用してます）\n収益　○　（収益化された配信にもどんどん使ってくれ）\n色変えや改変　○　（どんどんやっていいの作って）\nパーツ流用　○　（購入者は好きにバラして改変して使っていけ）\n再配布　○　（データを渡すのも可だけどりどみも一緒に渡してね\n　　　　　　　　VRCアバターペデスタル・クローンも可だけどアバター元がだめならだめだよ）\nR18-18G　○　（モデリングソフト使える人ならすぐ脱がせれるよ）\n政治や宗教要素　×　（政治批判等の要素に限る、ネタでコ○ギョしたりするのは面白いので良し）\n取材や雑誌掲載TV等に映るの　○　（知らぬ間にって場合もあるので気にしないでいいのよ）\nアクセサリー利用でのVtuber活動　○　（逆にする人居るなら呼んでほしいレベル）","url":"https://booth.pm/ja/items/949810","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e2c0f6c5-5ba0-4d14-8298-1e93a6e970f3/i/949810/e94f9351-6bab-4660-b499-f09b893a664a_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5G0P8NqJJ8jZpjt0NVFZ75cA0dpitGdTk4ENStLa+zo="></script>
+    nonce="uZB6AeXxZu7IVTAYQjHMXotAlCWfAIMZLeFidfNnBlI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -624,9 +624,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
