--- a/VRChat/26/948926.html
+++ b/VRChat/26/948926.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "plVp3dH7i4zO9CEptQBe473acUOnhvT1tRrYPT1MiuQ="></script>
+    "XzgbCrCYDoY8JMTYanbI1hCix0tri6X5UngmnU6LGQc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【YK's Atelier】ヘアピン,クローバー、スペード、ダイヤ、ハート　4種セット","description":"トランプでおなじみの、クローバー、スペード、ダイヤ、ハートのヘアピンとなっております。\n\n3Dアバター向けの小物、ワンポイントとして制作しました。\nすでにありそう、すでに誰か作ってそうと思いながら作りました。\n\n主にVRChatでの利用を想定しておりますが、他用途での利用も可能です。\n\n内容物：クローバー.fbx\n　　　　スペード.fbx\n　　　　ダイヤ.fbx\n　　　　ハート.fbx\n\nモデルポリゴン数：クローバー　△120\n　　　　　　　　　スペード　　△87\n　　　　　　　　　ダイヤ　　　△66\n　　　　　　　　　ハート　　　△110\n（以上のポリゴン数にピン部分のポリゴン数､△24が付属しております。）\n\nマテリアル：各2つ（マーク部分とピン）\n\n禁止事項：再配布、転売、自作発言","url":"https://booth.pm/ja/items/948926","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/20fcfc8e-a688-49a2-95b4-807f9553d59d/i/948926/d58920e1-9315-434a-9e07-e199c9a384d5_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="plVp3dH7i4zO9CEptQBe473acUOnhvT1tRrYPT1MiuQ="></script>
+    nonce="XzgbCrCYDoY8JMTYanbI1hCix0tri6X5UngmnU6LGQc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -348,9 +348,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
