--- a/VRChat/98/948798.html
+++ b/VRChat/98/948798.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Kb62ixD7MuYulo6+yJI4z3JN/LPKN6tlETVOKmvmfOk="></script>
+    "dPXV+BH/ENPyZcFTgKxtr6U+g3rRNNwPZDeNAIyaQ48="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"らげたけ灯篭","description":"らげたけが灯篭を持ってくれます。ご利益を感じる気がします。\nアバターの横に浮かせたり、家に飾ったりしましょう。\n改変分解もご自由に。\nボーンも入っているので、ダイナミックボーンをお持ちの方は揺らせます。\nライトは付属させていないので、お好みのライトをお付けください\n\n\n仕様\n　・各ポリゴン数\n灯篭　△850\nらげたけ　△2246\n計　△3096\n\n　・テクスチャ、ノーマルマップ、メタリックあり\n\n　・UnityPackage、FBX形式で入っています\n\n利用規約\n　・個人利用、商用利用共に自由。\n\n　・改変分解利用自由。\n\n　・VRChat内で配布する（ペデスタル）アバター、ワールド用のリソースとしての利用可能。\n\n以下の行為は禁止します\n　・このデータ、あるいはこのデータを基にした改変物を取り出せる状態で二次配布する事。\n\n　・このデータの製作者であることを騙る事。","url":"https://booth.pm/ja/items/948798","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/96ef0fd4-a352-46e3-8f16-59deaadb4c5a/i/948798/0af70e2e-3295-4b70-b2ca-9ebfab1fc390_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Kb62ixD7MuYulo6+yJI4z3JN/LPKN6tlETVOKmvmfOk="></script>
+    nonce="dPXV+BH/ENPyZcFTgKxtr6U+g3rRNNwPZDeNAIyaQ48="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -380,9 +380,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
