--- a/VRChat/71/943371.html
+++ b/VRChat/71/943371.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Bfgs/Z07Q2X445qQIWCEEYPyzRC671E2bjQzhNUffTU="></script>
+    "YhAp0bQZ7fa36mW2rSK7jw4qKoVfqI3rHhgv8NNHJNc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"大型両手剣 \"Schwer Klinge\"","description":"当工房製の重量片手剣を両手剣サイズに拡大した重量型両手剣です。\n全長が1.48mと、かなり大きいので注意！　必要に応じてスケールを調整して下さい。\n\nポリゴン数 △1816\nテクスチャ 2048*2048 3枚\n\nSketchfabで3Dモデルの閲覧もできます。\n\n※２枚目のモデル\nシンヤの模造武具 様 ブレイダーちゃん \nhttps://booth.pm/ja/items/954766","url":"https://booth.pm/ja/items/943371","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/943371/65d04845-5f38-4492-9faa-404ab77546fc_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Bfgs/Z07Q2X445qQIWCEEYPyzRC671E2bjQzhNUffTU="></script>
+    nonce="YhAp0bQZ7fa36mW2rSK7jw4qKoVfqI3rHhgv8NNHJNc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -469,9 +469,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
