--- a/VRChat/67/946567.html
+++ b/VRChat/67/946567.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "UZ+skGu0OYljK2KScgBHYaRvuHfPJCMOFnXgab+Jmp0="></script>
+    "Tx+ZmQEFO8UTQrkbFiR6tcr1rutom91CDTRu2Vtbcdo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】h0110w-ca","description":"UnityのHumanoid対応のオリジナル3Dモデルです。\n改変、再配布、商用利用可能のゆるゆる規約のメカむすモデルです。\nお好きに改変して遊んであげてください。\n\n\n\n\n以下規約（DLファイル内readmeより引用）\n\n-免責事項-\n・本データを使用し、何らかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n・条件についての内容は予告なく変更する場合があります。\n\n\n-利用条件について-\n当モデルデータ及び付属データの利用に関しましては以下のように定めます。\n・本モデルは営利目的の使用が可能です。（ゲーム、動画、画像、配信等）\n・本モデルはR-18、R-18Gでの使用が可能です。\n・本モデルの改変は自由です。再配布は自由です。（再配布時に記載していただけると喜びます。）\n・本モデルデータの利用をもって本利用規約に同意したものとみなします。\n\n\n\n-内容物について-\nモデルデータ（fbx）\nテクスチャデータ（UV画像、テクスチャ画像）\nunitypackage\nreadme（このファイル）\nおまけパーツセット（FBX）\n\n\n-その他メモ-\n改変前提のメカむす素体モデルです。\n各種バーチャルアバター、ゲーム、動画等何にでもお使いいただけます。\nVRChatでのアバターペデスタルの設定も制限がないのでご自由にお使いください。\n使ったよ報告してもらえると喜びます。\n\n\n規約等で不明な点がありましたら下記まで別途ご連絡ください。\n作品等に使用された方もお教えくださいますと励みになります。\n【連絡先 Contact】\nTwitter : ホロウ(@hollow_vt)\nhttps://twitter.com/hollow_vt\n\nまでリプライかDMをお願いします。\n","url":"https://booth.pm/ja/items/946567","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a85e65d9-8155-4fab-9fb3-6639d6b122df/i/946567/9d4a01f2-61d6-4ded-8e99-d6d3bfa74b96_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UZ+skGu0OYljK2KScgBHYaRvuHfPJCMOFnXgab+Jmp0="></script>
+    nonce="Tx+ZmQEFO8UTQrkbFiR6tcr1rutom91CDTRu2Vtbcdo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -375,9 +375,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
