--- a/VRChat/53/946253.html
+++ b/VRChat/53/946253.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "v+lnjF6mCmty0L1Uo3db8rGnMirgPTDe6RKNztkpA2U="></script>
+    "4SnIfrDqguR0mSUiksBfaQLggX7VwKeJkN41ELJpRCA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"重量片手剣 \"The Stahl\" (Heavy Sword)","description":"質量を以って叩き斬ることを意識した重量片手剣です。\n体格に合わせて、2つの刀身長から選択できます。\n\nSketchfabで3Dモデルの閲覧もできます。\n\nポリゴン数 △1010（2種類共通）\nテクスチャ 2048*2048 3枚（2種類共通）\n\nUnityパッケージ同梱、すぐにアバターにセットアップできます\n\n2枚目の使用例画像\n・盾：当工房製 Kite Shield（歩兵用中型盾）\nhttps://garden-of-ashen.booth.pm/items/1006978\n\n・モデル：KUKURi様 桜川虎子\nhttps://booth.pm/ja/items/987801","url":"https://booth.pm/ja/items/946253","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/946253/87e4d901-eb81-4d38-a638-3c5beba23c75_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="v+lnjF6mCmty0L1Uo3db8rGnMirgPTDe6RKNztkpA2U="></script>
+    nonce="4SnIfrDqguR0mSUiksBfaQLggX7VwKeJkN41ELJpRCA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -510,9 +510,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
